--- a/TeamCityOctopus/slides/index.html
+++ b/TeamCityOctopus/slides/index.html
@@ -8,15 +8,12 @@
 
 		<meta name="description" content="A presentation on automated builds and deployments">
 		<meta name="author" content="Matt Ash">
-
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
-
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/sky.css" id="theme">
-
+		<link rel="stylesheet" href="css/teamcity_octopus.css">
 		<!-- Code syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
 
@@ -37,7 +34,8 @@
 	<body>
 
 		<div class="reveal">
-
+			<img src="img/octopus/octopus_logo.png" id="octopus-logo" class="logo">
+			<img src="img/tc/tc-logo_400x400.png" id="tc-logo" class="logo">
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
@@ -51,43 +49,159 @@
 				</section>
 
 				<section>
-					<h2>Credits</h2>
+					<h3>Without the fine work of these folks, none of this would be possible</h3>
 					<p class="fragment"><a href="https://www.jetbrains.com/teamcity/" title="https://www.jetbrains.com/teamcity/">TeamCity</a> by JetBrains</p>
 					<p class="fragment"><a href="https://octopusdeploy.com/">Octopus Deploy</a> by <span class="fragment">Octopus Deploy</span></p>
 				</section>
-
+				<section>
+					<h2>Me</h2>
+					<ul>
+						<li>Matt Ash</li>
+						<li>I hate shaving</li>
+						<li>I like writing code</li>
+						<li>I really like automating its build and deployment process</li>
+						<li>@ashmatthew</li>
+					</ul>
+				</section>
 				<section>
 					<h2>What this is not</h2>
-					<p class="fragment">Full examination of TeamCity</p>
-					<p class="fragment">Full examination of Octopus Deploy</p>
-					<p class="fragment">Comparison with other build automation tools</p>
+					<ol>
+						<li class="fragment">Full examination of TeamCity</li>
+						<li class="fragment">Full examination of Octopus Deploy</li>
+						<li class="fragment">Comparison with other build automation tools</li>
+						<li class="fragment">A lesson in organizing</li>
+					</ol>
 				</section>
-
-				<!-- Example of nested vertical slides -->
+				<section>
+					<h2>What this is!</h2>
+					<p>
+						A highlight of features from both products that I believe are essential
+						<div>
+							<img src="img/lebowski/Yeahwellthatsjustlikeyouropinionman.jpg" width="60%"/>
+						</div>
+					</p>
+				</section>
+				<section>
+					<h2>What else this is!</h2>
+					<p>
+						A little knowledge, and a little confidence
+					</p>
+					<p class="fragment"><small>...and maybe a little Big Lebowski humor because come on...seriously, Big Lebowski</small></p>
+				</section>
+				<section>
+					<h2>Hopefully you're at least a little familiar with...</h2>
+					<ol>
+						<li class="fragment"><a href="https://www.nuget.org">NuGet</a></li>
+						<li class="fragment">Standard Structure of WebApps as served by IIS</li>
+						<li class="fragment">Web.Config transformations</li>
+						<li class="fragment">TeamCity and Octopus Deploy logos</li>
+						<li class="fragment">The Big Lebowski</li>
+					</ol>
+				</section>
 				<section>
 					<section>
-						<h2>Vertical Slides</h2>
-						<p>Slides can be nested inside of each other.</p>
-						<p>Use the <em>Space</em> key to navigate through all slides.</p>
-						<br>
-						<a href="#" class="navigate-down">
-							<img width="178" height="238" data-src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Down arrow">
-						</a>
+						<h2>Expected Results</h2>
 					</section>
-					<section>
-						<h2>Basement Level 1</h2>
-						<p>Nested slides are useful for adding additional detail underneath a high level horizontal slide.</p>
+					<section data-state="tc-only">
+						<h2>A TeamCity Project that</h2>
+						<ol>
+							<li class="fragment">Resolves NuGet dependencies</li>
+							<li class="fragment">Compiles a solution</li>
+							<li class="fragment">Runs automated tests</li>
+							<li class="fragment">Creates an <em>Octopus</em> deployable NuGet package</li>
+						</ol>
 					</section>
-					<section>
-						<h2>Basement Level 2</h2>
-						<p>That's it, time to go back up.</p>
-						<br>
-						<a href="#/2">
-							<img width="178" height="238" data-src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Up arrow" style="transform: rotate(180deg); -webkit-transform: rotate(180deg);">
-						</a>
+					<section data-state="octopus-only">
+						<h2>An Octopus Project that</h2>
+						<ol>
+							<li class="fragment">Downloads a NuGet package from TeamCity</li>
+							<li class="fragment">Creates a release</li>
+							<li class="fragment">Deploys a release to various environments</li>
+							<li class="fragment">Updates configuration variables per environment</li>
+						</ol>
 					</section>
 				</section>
+				<section>
+					<h3>Note: if you see something in <span class="helper" title="remind me what this is">this</span> color, hover for a reminder of what this is.</h3>
+				</section>
+				<section>
+					<p>
+						<img src="img/lebowski/jesus.gif"/>
+					</p>
+					<h2>Ok, Let's do this!</h2>
+				</section>
+				<!-- 1st TeamCity section -->
+				<section data-state="tc-only">
+					<section>
+						<h2>Basic Concepts</h2>
+					</section>
+					<section>
+						<h2>Basic Concepts</h2>
+						<h3>Build Server vs. Build Agents</h3>
+						<p>
+							<img src="img/tc/build_server_and_agents.png" style="max-width: 75%;">
+						</p>
+					</section>
+					<section>
+						<h2>Basic Concepts</h2>
+						<p>
+							<img src="img/tc/tc-concepts.png" style="max-width: 60%;">
+						</p>
+					</section>
+					<section>
+						<h2>Basic Concepts</h2>
+						<h3><strong>Projects</strong></h3>
+						<ul>
+							<li>Typically tied to a solution (.sln)</li>
+							<li>Contains child projects -- and/or -- build configurations</li>
+							<li>They are what appears on your home screen</li>
+						</ul>
+					</section>
+					<section>
+						<h2>Basic Concepts</h2>
+						<h3>Project > <strong>Build Configurations</strong></h3>
+						<ul>
+							<li>High level container for your build process</li>
+							<li>Contains build steps</li>
+							<li>Can have dependencies or be another configuration's dependent configuration (we'll get to dependencies)</li>
+						</ul>
+					</section>
+					<section>
+						<h2>Basic Concepts</h2>
+						<h4>... > Build Configurations > <strong>Build Steps</strong></h4>
+						<ul>
+							<li>Task for a build agent to execute</li>
+							<li>Contains build steps</li>
+							<li>Can have dependencies or be another confiugrations dependent configuration</li>
+						</ul>
+					</section>
+					<section>
+						<h2>Basic Concepts</h2>
+						<h3>VCS Roots</h3>
+						<ul>
+							<li>Version Control System</li>
+							<li>Checkout rules</li>
+							<li>Pending changes</li>
+						</ul>
+					</section>
+				</section>
+				<section data-state="tc-only">
+					<section>
+						<h2>"Advanced" Concepts</h2>
+						<p>
+						<img src="img/lebowski/donnie.jpg">
+						</p>
+					</section>
+					<section>
+						<h2>"Advanced" Concepts</h2>
+						<h3>Triggers</h3>
+						<ul>
+							<li>Mechanisms for <strong>starting</strong> the execution of a <span class="helper" title="collection of build steps, belongs to a project">build configuration</span></li>
 
+						</ul>
+					</section>
+				</section>
+				<!-- End TeamCity section -->
 				<section>
 					<h2>Slides</h2>
 					<p>
@@ -384,12 +498,10 @@ Reveal.addEventListener( 'customevent', function() {
 				</section>
 
 			</div>
-
 		</div>
 
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.js"></script>
-
 		<script>
 
 			// Full list of configuration options available at:
@@ -414,6 +526,5 @@ Reveal.addEventListener( 'customevent', function() {
 			});
 
 		</script>
-
 	</body>
 </html>
