testing vcs trigger

--- a/TeamCityOctopus/slides/index.html
+++ b/TeamCityOctopus/slides/index.html
@@ -408,6 +408,7 @@
 							<li class="fragment">We need to build the solution</li>
 							<li class="fragment">We need to run automated tests</li>
 							<li class="fragment">We need to generate some artifacts</li>
+							<li class="fragment">We want to do these things with every commit</li>
 						</ul>
 						<aside class="notes">
 							<ul>
