fixed wrong name in slides

--- a/TeamCityOctopus/slides/index.html
+++ b/TeamCityOctopus/slides/index.html
@@ -323,7 +323,7 @@
 									<li>The most specific scope will be used</li>
 								</ul>
 							</li>
-							<li>Library Sets (we'll get to it)</li>
+							<li>Variable Sets (we'll get to it)</li>
 						</ul>
 					</section>
 					<section>
@@ -368,7 +368,7 @@
 					</section>
 					<section>
 						<h2>"Advanced" Concepts</h2>
-						<h3>Library Sets</h3>
+						<h3>Variable Sets</h3>
 						<ul>
 							<li><span class="helper" title="typically belong to a project and replace appSettings and connectionStrings">Variables</span> outside of Projects</li>
 							<li>Can be included on many projects</li>
