differentiated between octopack and octopus deploy plugin

--- a/TeamCityOctopus/slides/index.html
+++ b/TeamCityOctopus/slides/index.html
@@ -259,7 +259,7 @@
 						<h3>Plugins</h3>
 						<ul>
 							<li>Outside of projects, build configurations or build steps</li>
-							<li>Octopack (we'll come back to this)</li>
+							<li>Octopus Deploy Plugin (we'll come back to this)</li>
 							<li>Refer to TeamCity Wiki</li>
 						</ul>
 					</section>
@@ -342,7 +342,7 @@
 					</section>
 					<section>
 						<h2>Basic Concepts</h2>
-						<h3>Octopack TeamCity Plugin</strong></h3>
+						<h3>Octopus Deploy TeamCity Integrations</strong></h3>
 						<ul>
 							<li>Octopack</li>
 							<ul>
